rename as UPromise

--- a/demo/index.html
+++ b/demo/index.html
@@ -30,9 +30,10 @@
         <p class="col">UA - isIE:<span id="isIE"></span></p>
         <p class="col">UA - isSmartis:<span id="isSmartis"></span></p>
         <p class="col">UA - isIPad:<span id="isIPad"></span></p>
-        <p class="col">Promise - p1:<span id="pp1"></span></p>
-        <p class="col">Promise - p2:<span id="pp2"></span></p>
-        <p class="col">Promise - p3:<span id="pp3"></span></p>
+        <p class="col">UPromise - p1:<span id="pp1"></span></p>
+        <p class="col">UPromise - p2:<span id="pp2"></span></p>
+        <p class="col">UPromise - p3:<span id="pp3"></span></p>
+        <p class="col">UPromise - when:<span id="pwhen"></span></p>
     </div>
     <!-- use CokeUtil directly -->
     <!-- -->
